[package]
name = "hugging_face_dataset_downloader"
version = "0.1.0"
edition = "2021"
alias = "hfdd"

[profile.release]
debug = 0
incremental = false
panic = "abort"
opt-level = 3       # 0-3
strip = 'symbols'   # strip symbols from binary
lto = true          # enable link time optimization

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
indicatif = "0.17.8"
parquet = { version = "53.0.0", features = ["async", "json", "serde", "tokio"] }
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["stream", "json"] }
serde = "1.0.209"
serde_json = "1.0.127"
tempfile = "3.12.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
